--- a/html/room.html
+++ b/html/room.html
@@ -19,6 +19,10 @@
 
   <body>
     <div id="main"></div>
+    <div id="popup" class="popup">
+      <p>This is a dialogue inside a popup!</p>
+      <button id="closePopupButton">Close</button>
+    </div>
 
     <!-- Bootstrap JS and jQuery (required for Bootstrap) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
