--- a/html/room.html
+++ b/html/room.html
@@ -20,7 +20,12 @@
   <body>
     <div id="main"></div>
     <div id="popup" class="popup">
-      <p>This is a dialogue inside a popup!</p>
+      <input type="text" placeholder="Card Number" />
+      <input type="text" placeholder="Card Holder Name" />
+      <input type="text" placeholder="Expiry Date" />
+      <input type="text" placeholder="CVV" />
+      <input type="text" placeholder="Phone" />
+      <button id="subButton">Book</button>
       <button id="closePopupButton">Close</button>
     </div>
 
